fixed show page width on mobile

--- a/src/main/resources/static/css/show.css
+++ b/src/main/resources/static/css/show.css
@@ -52,6 +52,11 @@ form .icon-button
 
 }
 
+.slider
+{
+    width: 170px !important;
+}
+
 
 /******************************************
 SHOW HEADER
@@ -105,7 +110,7 @@ USER REVIEWS
 ******************************************/
 #user-reviews
 {
-    
+
 }
 
 /*****************************************
